fixtures/errors/with_stmt.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: with statement is not supported in strict/static scope mode
 --> errors/with_stmt.js:1:1
1 | with ({}) { console.log("hi"); }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

